kubernetes/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: be
          image: registry.digitalocean.com/remah/be:v1
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  selector:
    app: be
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
