kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector: 
    matchLabels:
      svctype: internal
  template:
    metadata:
      labels:
        app: mongodb
        svctype: internal
    spec:
      containers:
      - image: mongo
        name: mongodb
        # env:
        #   - name: MONGO_INITDB_ROOT_USERNAME
        #     value: remah
        #   - name: MONGO_INITDB_ROOT_PASSWORD
        #     value: remah654312
        ports:
        - containerPort: 27017
          name: "27017-port"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    svctype: internal
  type: ClusterIP
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
